# prettyplease-cli

./: Cargo.toml  README.md  cargo_publish.sh  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
src/: main.rs
tests/: bootstrap.rs
